# codeforge-cli

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
python/: llm_adaptor.py
scripts/: codegen.sh  raw.sh  test_context_build.sh  test_extract.sh  test_locate.sh  test_prompt.sh  test_scan.sh  test_search.sh  test_snippets.sh
src/: main.cpp
src/app/: codegen_runner.cpp  codegen_runner.h
src/cli/: cmd_ask.cpp  cmd_context.cpp  cmd_extract.cpp  cmd_locate.cpp  cmd_prompt.cpp  cmd_raw.cpp  cmd_scan.cpp  cmd_search.cpp  cmd_snippets.cpp  commands.cpp  commands.h
src/sys/: error.cpp  error.h  fd.cpp  fd.h  io.cpp  io.h  process.h  process_posix.cpp
src/workspace/: context_builder.cpp  context_builder.h  prompt_spec.cpp  prompt_spec.h  scanner.cpp  scanner.h  search_rg.cpp  search_rg.h
src/workspace/java/: dep_harvest.h  dep_harvest_ts.cpp  extractor.h  extractor_text.cpp  extractor_treesitter.cpp  locator.h  locator_text.cpp  snippet_from_hit.h  snippet_from_hit_ts.cpp
